"Internal implementation details"

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    glob(["*.bzl"]),
    visibility = ["//docs:__pkg__"],
)

filegroup(
    name = "package_content",
    srcs = glob([
        "*.bzl",
        "*.bazel",
    ]),
    visibility = ["//kubeconform/private:__pkg__"],
)

bzl_library(
    name = "lint",
    srcs = ["lint.bzl"],
    visibility = ["//kubeconform:__subpackages__"],
    deps = ["@bazel_skylib//lib:collections"],
)

bzl_library(
    name = "import",
    srcs = ["import.bzl"],
    visibility = ["//kubeconform:__subpackages__"],
)
